--- a/.classpath
+++ b/.classpath
@@ -7,7 +7,7 @@
 	<classpathentry kind="lib" path="/home/patryk/Desktop/dcm4che-2.0.26/lib/commons-cli-1.2.jar"/>
 	<classpathentry kind="lib" path="/home/patryk/Desktop/dcm4che-2.0.26/lib/dcm4che-audit-2.0.26.jar"/>
 	<classpathentry kind="lib" path="/home/patryk/Desktop/dcm4che-2.0.26/lib/dcm4che-base64-2.0.26.jar"/>
-	<classpathentry kind="lib" path="/home/patryk/Desktop/dcm4che-2.0.26/lib/dcm4che-core-2.0.26.jar"/>
+	<classpathentry kind="lib" path="/home/patryk/Desktop/dcm4che-2.0.26/lib/dcm4che-core-2.0.26.jar" sourcepath="/home/patryk/Desktop/dcm4che-2.0.26/lib/dcm4che-core-2.0.26.jar"/>
 	<classpathentry kind="lib" path="/home/patryk/Desktop/dcm4che-2.0.26/lib/dcm4che-filecache-2.0.26.jar"/>
 	<classpathentry kind="lib" path="/home/patryk/Desktop/dcm4che-2.0.26/lib/dcm4che-image-2.0.26.jar"/>
 	<classpathentry kind="lib" path="/home/patryk/Desktop/dcm4che-2.0.26/lib/dcm4che-imageio-2.0.26.jar"/>
